GWT Events - fixed back button - store last search in a cookie - added More button - event/room filter made a little wider - header: ensure that a cloned button on the screen does not have an access key - event manager can export pdf/csv - capacity column is shown by default - made the x buttons a little darker - added ability to see all rooms (matching the room filter) and/or all weeks (matching the selected academic session) in the grid